kubernetes/minikube/dappy.local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dappy-node
spec:
  selector:
    matchLabels:
      app: dappy-node
  template:
    metadata:
      labels:
        app: dappy-node
    spec:
      containers:
        - image: fabcotech/dappy-node:2.9
          name: dappy-node
          ports:
            - containerPort: 3001
            - containerPort: 3002
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dappy-node
spec:
  type: NodePort
  selector:
    app: dappy-node
  ports:
    - port: 3001
      targetPort: 3001
    - port: 3002
      targetPort: 3002
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis
          name: redis
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 6379
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      name: redis
      targetPort: 6379
