kubernetes/minikube/rnodes.local.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aarnode
spec:
  selector:
    matchLabels:
      app: aarnode
  template:
    metadata:
      labels:
        app: aarnode
    spec:
      volumes:
      - name: rnode-genesis-config
        configMap:
          name: rnode-genesis-config       

      containers:
        - image: rchain/rnode:v0.12.1
          name: aarnode-propose
          command:
          - sh
          - '-c'
          - while true; do /opt/docker/bin/rnode --grpc-port 40402 propose; done
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
        - image: rchain/rnode:v0.12.1
          name: aarnode
          command:
            - sh
            - "-c" 
            - |
              /opt/docker/bin/rnode run -s \
                --validator-private-key 28a5c9ac133b4449ca38e9bdf7cacdce31079ef6b3ac2f0a080af83ecff98b36 \
                --dev-mode
          volumeMounts:
          - name: rnode-genesis-config
            mountPath: /root/.rnode/genesis               
          ports:
            - containerPort: 40400
            - containerPort: 40401
            - containerPort: 40402
            - containerPort: 40403
            - containerPort: 40404
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi

      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: aarnode
spec:
  type: NodePort
  selector:
    app: aarnode
  ports:
    - port: 40403
      name: '40403'
      targetPort: 40403

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aarnode-https
spec:
  tls:
    - hosts:
      - rnode.dev
      secretName: sslsecret
  rules:
    - host: rnode.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aarnode
              port:
                number: 40403

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aarnode-http
spec:
  rules:
    - host: rnode.http.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aarnode
              port:
                number: 40403
